# zephyr

./: .clang-format  .gitignore  .gitmodules  README.md  build.py  test.py
.west/: config
ble/app/: README.md  prj.conf
docker/: Dockerfile  build_and_push.sh  requirements.txt
drivers/disk/: ramdisk.c
drivers/flash/: flash_mcux_flexspi_nor.c
files/bits/: c++config.h
io/app/: prj.conf
io/overlay/: mimxrt1050_evk_qspi.conf
mcu-project/: Kconfig  west.yml
mcu-project/apps/io/: CMakeLists.txt  Kconfig  Kconfig.logging  README.md  bootloader.conf  debug.conf  development.conf  functions.cmake  logging.conf  mimxrt1050_evk_qspi.conf  mimxrt1060_evk.conf  prj.conf  sample.yaml
mcu-project/apps/io/Doxygen/: Doxyfile
mcu-project/apps/io/boards/: mimxrt1050_evk.overlay  mimxrt1050_evk_qspi.overlay  mimxrt1060_evk.overlay
mcu-project/apps/io/boards/bootloader/: mimxrt1050_evk_qspi.conf
mcu-project/apps/io/lib/display/: Circle1.h  Circle3.h  Circle4.h  Circle6.h  Circle7.h  display.c
mcu-project/apps/io/lib/message/: message_dispatcher.cpp  message_dispatcher.h  message_encoder.cpp  message_encoder.h  message_generator.py  message_handler.cpp  message_handler.h
mcu-project/apps/io/lib/message/templates/: message_encoder_cpp.template  message_encoder_h.template  message_handler_cpp.template  message_handler_h.template  x_message_encoder_cpp.template  x_message_encoder_h.template  x_message_handler_h.template
mcu-project/apps/io/lib/sensors/: display.cpp  display.h  inclinometer.cpp  inclinometer.h  sensor.h
mcu-project/apps/io/lib/usb/: usb_hid.cpp  usb_hid.h
mcu-project/apps/io/proto/: outer.proto  system.proto
mcu-project/apps/io/src/: CMakeLists.txt  main.cpp  message_thread.cpp  message_thread.h  message_type_handler.cpp
mcu-project/apps/io/src/display/: CMakeLists.txt  display.h  display_com35.cpp  display_com35.h  display_com35h3.cpp  display_com35h3.h  display_mock.cpp  display_mock.h
mcu-project/apps/io/src/display/images/: Circle1.h  Circle2.h  Circle3.h  Circle4.h  Circle5.h  Circle6.h  Circle7.h  Circle8.h  TrackManLogo.h
mcu-project/apps/io/src/logger/: CMakeLists.txt  logger.h  logger_impl.cpp  logger_mock.cpp  logger_mock.h  logger_zephyr.cpp  logger_zephyr.h
mcu-project/apps/io/src/managers/: battery_manager.cpp  battery_manager.h  display_manager.cpp  display_manager.h  imu_manager.cpp  imu_manager.h  inclinometer_manager.cpp  inclinometer_manager.h  leg_manager.cpp  leg_manager.h  manager.h  message_manager.cpp  message_manager.h  message_manager_new.cpp  message_manager_new.h  state_manager_smf.cpp  state_manager_smf.h  state_manager_sml.cpp  state_manager_sml.h
mcu-project/apps/io/src/message_handlers/: CMakeLists.txt  battery_message_handler_impl.cpp  battery_message_handler_impl.h  display_message_handler_impl.cpp  display_message_handler_impl.h  functions.cmake  inclinometer_message_handler_impl.cpp  inclinometer_message_handler_impl.h  system_message_handler_impl.cpp  system_message_handler_impl.h
mcu-project/apps/io/src/message_handlers/proto/: battery.options  battery.proto  display.proto  inclinometer.proto  system.proto
mcu-project/apps/io/src/messages/: commands.h  display_mgmt.cpp  display_mgmt.h  mgmt_handler.h  system_mgmt.cpp  system_mgmt.h
mcu-project/apps/io/src/sensors/: CMakeLists.txt  battery.h  battery_charger.h  battery_charger_bq25713.cpp  battery_charger_bq25713.h  battery_charger_mock.cpp  battery_charger_mock.h  battery_mock.cpp  battery_mock.h  battery_nh2054qe34.cpp  battery_nh2054qe34.h  display.h  display_impl.h  imu.h  imu_fxos8700.cpp  imu_fxos8700.h  imu_mock.cpp  imu_mock.h  inclinometer.h  inclinometer_impl.cpp  inclinometer_impl.h  inclinometer_mock.cpp  inclinometer_mock.h  inclinometer_scl3300.cpp  inclinometer_scl3300.h  leg_control.h  leg_control_impl.cpp  leg_control_impl.h
mcu-project/apps/io/src/smp_commands/: CMakeLists.txt  commands.h  display_mgmt.cpp  display_mgmt.h  functions.cmake  mgmt.h  system_mgmt.cpp  system_mgmt.h
mcu-project/apps/io/src/smp_commands/proto/: system_new.options  system_new.proto
mcu-project/apps/io/src/usb/: usb_hid.h  usb_hid_mock.cpp  usb_hid_mock.h  usb_hid_zephyr.cpp  usb_hid_zephyr.h
mcu-project/apps/io/src/utils/: util.cpp  util.h  wrappers_zephyr.h
mcu-project/boards/: mimxrt1050_evk_qspi.overlay  mimxrt1060_evk.overlay
mcu-project/modules/message_handler/: CMakeLists.txt  Kconfig  message_dispatcher.cpp  message_dispatcher.h  message_encoder.cpp  message_encoder.h  message_handler.cpp  message_handler.h
mcu-project/modules/message_handler/google/protobuf/: any.options
mcu-project/modules/message_handler/templates/: x_message_encoder_cpp.template  x_message_encoder_h.template  x_message_handler_cpp.template  x_message_handler_h.template
mcu-project/tests/io/managers/battery/: CMakeLists.txt
mcu-project/tests/io/managers/battery/src/: test_battery.cpp
mcu-project/tests/io/message/dispatcher/: CMakeLists.txt  test_dispatcher.conf
mcu-project/tests/io/message/dispatcher/src/: test_dispatcher_chain.cpp
mcu-project/tests/io/message/handlers/: CMakeLists.txt  test_handlers.conf
mcu-project/tests/io/message/handlers/src/: test_handlers.cpp
mcu-project/tests/managers/inclinometer/: CMakeLists.txt  testcase.yaml
mcu-project/tests/managers/inclinometer/src/: test_inclino.cpp
mcu-project/tests/message/: .gitignore  CMakeLists.txt  functions.cmake  prj.conf  testcase.yaml
mcu-project/tests/message/dispatcher/: CMakeLists.txt  test_dispatcher.conf  testcase.yaml
mcu-project/tests/message/dispatcher/src/: test_dispatcher_chain.cpp
mcu-project/tests/message/handlers/: CMakeLists.txt  test_handlers.conf  testcase.yaml
mcu-project/tests/message/handlers/src/: test_handlers.cpp
mcu-project/tests/message/proto/: message.options  message.proto
mcu-project/tests/message/src/: display_mock.c  message.cpp
pipelines/: build-mcu.yml  ci_build_and_test.yml  deploy.yml  normalize.yml  set-version.yml  tag.yml
pytest/: README.md  conftest.py  pytest.ini
scripts/: .gitignore  cli.py  test_reset.py
zephyrproject/: README.md
(+157 files in other folders)
